First header created
Creating header with my name and a menu

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewpoet" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="./assets/css/reset.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
+<!-- Creating header with my name and a menu -->
+<body>
+  <header>
+    <h1>Marcelo Souza Campos</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Education</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+</body>
