--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewpoet" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio</title>
-  <link rel="stylesheet" href="./assets/css/reset.css" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./asset/css/reset.css" />
+  <link rel="stylesheet" href="./asset/css/style.css" />
 </head>
 <!-- Creating header with my name and a menu -->
 <body>
@@ -21,4 +21,14 @@
       </ul>
     </nav>
   </header>
+
+  
+  <main>
+    <section>
+      <h2>Profile</h2>
+      <img src="./asset/images/Avatar200x200.png" alt="Marcelo Avatar200x200" width="200" height="200">
+      <p>Self-motivated, energetic Electronic/Telecommunication Technician seeking a position with company to both enhance my skills in this profession and to help expand the growth of company. Availability full time a week. Weekends and holidays anytime.</p>
+  
+    </section>
+    </main>
 </body>
