--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@
     </nav>
   </header>
 
+  <p id="demo">Fetch a file to change this text.</p>
+  <script>
   
+  let file = "fetch_info.txt"
+  
+  fetch (file)
+  .then(x => x.text())
+  .then(y => document.getElementById("demo").innerHTML = y);
+  
+  </script>
+
   <main>
     <section>
       <h2>Profile</h2>
