--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="caracteristics">
       <section class="skills">
         <header>Skills</header>
-        <img src="./asset/images/coding.jpg">
+        <img src="./asset/images/coding.jpg" alt="Coding" width="300" height="200">
         <ul>
           <li>Git and GitHub Repository Creation</li>
           <li>Hypertext Markup Language (HTML)</li>
