--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
     <div class="profile">
       <section class="profile">
-        <header>Profile</header>
+        <header><h2>Profile</h2></header>
         <img src="./asset/images/Avatar200x200.png" alt="Marcelo Avatar200x200" width="200" height="200">
         <p>Self-motivated, energetic Electronic/Telecommunication Technician seeking a position with company to both enhance my skills in this profession and to help expand the growth of company. Availability full time a week. Weekends and holidays anytime.</p>
       </section>
@@ -45,7 +45,7 @@
       </section>
       <section class="education">
         <header>Education</header>
-        <img src="./asset/images/education.jpeg">
+        <img src="./asset/images/education.jpeg" alt="Education" width="300" height="200">
         <ul>
           <li><a href="https://techbootcamp.sydney.edu.au/">The Coding Boot Camp at the University of Sydney</a></li>
           <li><a href="https://www.tafensw.edu.au/course-areas/information-and-communication-technology#electronics-and-communications">Electronics and Communications Engineering at TAFE</a></li>
