testing some modifications in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 <!-- Creating header with my name and a menu -->
 <body>
-  <header>
+  <div class="header">
     <h1>Marcelo Souza Campos</h1>
     <nav>
       <ul>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Education</a></li>
+        <li><a href="#Avatar200x200">Profile</a></li>
+        <li><a href="#coding">Skills</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-  </header>
+  </div>
 <!-- Creating a field profile with picture and description -->
   <main>
     <div class="profile">
       <section class="profile">
-        <header><h2>Profile</h2></header>
+        <nav><h2>Profile</h2></nav>
         <img src="./asset/images/Avatar200x200.png" alt="Marcelo Avatar200x200" width="200" height="200">
         <p>Self-motivated, energetic Electronic/Telecommunication Technician seeking a position with company to both enhance my skills in this profession and to help expand the growth of company. Availability full time a week. Weekends and holidays anytime.</p>
       </section>
