making the reset.css available again

--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
 <body>
   <div class="header">
     <h1>Marcelo Souza Campos</h1>
-    <nav>
+    <div>
       <ul>
         <li><a href="#Avatar200x200">Profile</a></li>
         <li><a href="#coding">Skills</a></li>
         <li><a href="#education">Education</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
+    </div>
   </div>
 <!-- Creating a field profile with picture and description -->
-  <main>
+  <div class="hero"></div>
+  <div class="content"></div>
     <div class="profile">
-      <section class="profile">
-        <nav><h2>Profile</h2></nav>
-        <img src="./asset/images/Avatar200x200.png" alt="Marcelo Avatar200x200" width="200" height="200">
+        <img src="./asset/images/Avatar200x200.png" alt="Marcelo Avatar200x200" width="200" height="200" class="float-left">
+        <h2>Profile</h2>        
         <p>Self-motivated, energetic Electronic/Telecommunication Technician seeking a position with company to both enhance my skills in this profession and to help expand the growth of company. Availability full time a week. Weekends and holidays anytime.</p>
-      </section>
     </div>
 
 <!-- Creating fields skills, and education. -->
