updade fild profile, skills, education, and the h2 font

--- a/index.html
+++ b/index.html
@@ -23,36 +23,32 @@
   </div>
 <!-- Creating a field profile with picture and description -->
   <div class="hero"></div>
-  <div class="content"></div>
+  <div class="content">
     <div class="profile">
         <img src="./asset/images/Avatar200x200.png" alt="Marcelo Avatar200x200" width="200" height="200" class="float-left">
         <h2>Profile</h2>        
         <p>Self-motivated, energetic Electronic/Telecommunication Technician seeking a position with company to both enhance my skills in this profession and to help expand the growth of company. Availability full time a week. Weekends and holidays anytime.</p>
     </div>
-
 <!-- Creating fields skills, and education. -->
-    <div class="caracteristics">
-      <section class="skills">
-        <header>Skills</header>
-        <img src="./asset/images/coding.jpg" alt="Coding" width="300" height="200">
+    <div class="skills">
+        <h2>Skills</h2>
+        <img src="./asset/images/skills-image.jpg" alt="Coding" width="300" height="200" class="float-right">
         <ul>
           <li>Git and GitHub Repository Creation</li>
           <li>Hypertext Markup Language (HTML)</li>
           <li>Cascading Style Sheets (CSS)</li>
           <li>JavaScript (JS)</li>
         </ul>
-      </section>
-      <section class="education">
-        <header>Education</header>
-        <img src="./asset/images/education.jpeg" alt="Education" width="300" height="200">
+    </div>
+    <div class="education">
+        <img src="./asset/images/education.jpeg" alt="Education" width="300" height="200" class="float-left">
+        <h2>Education</h2>
         <ul>
           <li><a href="https://techbootcamp.sydney.edu.au/">The Coding Boot Camp at the University of Sydney</a></li>
           <li><a href="https://www.tafensw.edu.au/course-areas/information-and-communication-technology#electronics-and-communications">Electronics and Communications Engineering at TAFE</a></li>
           <li><a href="https://educacao-executiva.fgv.br/df/brasilia/cursos/mba-pos-graduacao/mba-presencial/mba-em-gerenciamento-de-projetos-2?oferta=102483">MBA of Project Management at FGV</a></li>
           <li><a href="https://inatel.br/vestibular/engenharia-eletrica">Electrical Engineering at INATEL</a></li>
         </ul>
-      </section>
     </div>
-    
-  </main>
+  </div>
 </body>
