create right column

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
 <!-- Creating fields skills, and education. -->
     <div class="skills">
-        <h2>Skills</h2>
         <img src="./asset/images/skills-image.jpg" alt="Coding" width="300" height="200" class="float-right">
+        <h2>Skills</h2>
         <ul>
           <li>Git and GitHub Repository Creation</li>
           <li>Hypertext Markup Language (HTML)</li>
@@ -49,6 +49,15 @@
           <li><a href="https://educacao-executiva.fgv.br/df/brasilia/cursos/mba-pos-graduacao/mba-presencial/mba-em-gerenciamento-de-projetos-2?oferta=102483">MBA of Project Management at FGV</a></li>
           <li><a href="https://inatel.br/vestibular/engenharia-eletrica">Electrical Engineering at INATEL</a></li>
         </ul>
+    </div>
+  </div>
+  <div class="caracteristics">
+    <div class="caracteristics-profile">
+      <h3>Marcelo's Profile</h3>
+      <img src="./asset/images/marceloeducation.png" />
+      <p>
+        Self-motivated, energetic Electronic/Telecommunication Technician seeking a position with company to both enhance my skills in this profession and to help expand the growth of company. Availability full time a week. Weekends and holidays anytime.
+      </p>
     </div>
   </div>
 </body>
