changing parameters and updating pictures

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>Marcelo Souza Campos</h1>
     <div>
       <ul>
-        <li><a href="#Avatar200x200">Profile</a></li>
-        <li><a href="#coding">Skills</a></li>
+        <li><a href="#profile">Profile</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -24,14 +24,14 @@
 <!-- Creating a field profile with picture and description -->
   <div class="hero"></div>
   <div class="content">
-    <div class="profile">
-        <img src="./asset/images/Avatar200x200.png" alt="Marcelo Avatar200x200" width="200" height="200" class="float-left">
+    <div id="profile" class="profile">
+        <img src="./asset/images/profile.png" alt="Marcelo profile" width="200" height="200" class="float-left">
         <h2>Profile</h2>        
         <p>Self-motivated, energetic Electronic/Telecommunication Technician seeking a position with company to both enhance my skills in this profession and to help expand the growth of company. Availability full time a week. Weekends and holidays anytime.</p>
     </div>
 <!-- Creating fields skills, and education. -->
-    <div class="skills">
-        <img src="./asset/images/skills-image.jpg" alt="Coding" width="300" height="200" class="float-right">
+    <div id="skills" class="skills">
+        <img src="./asset/images/skills.jpg" alt="skills" width="300" height="200" class="float-right">
         <h2>Skills</h2>
         <ul>
           <li>Git and GitHub Repository Creation</li>
@@ -40,8 +40,8 @@
           <li>JavaScript (JS)</li>
         </ul>
     </div>
-    <div class="education">
-        <img src="./asset/images/education.jpeg" alt="Education" width="300" height="200" class="float-left">
+    <div id="education" class="education">
+        <img src="./asset/images/education.jpeg" alt="education" width="300" height="200" class="float-left">
         <h2>Education</h2>
         <ul>
           <li><a href="https://techbootcamp.sydney.edu.au/">The Coding Boot Camp at the University of Sydney</a></li>
