test of features

--- a/index.html
+++ b/index.html
@@ -59,5 +59,18 @@
         Self-motivated, energetic Electronic/Telecommunication Technician seeking a position with company to both enhance my skills in this profession and to help expand the growth of company. Availability full time a week. Weekends and holidays anytime.
       </p>
     </div>
+    <div class="caracteristics-skills">
+      <h3>Core Skils and Competency</h3>
+      <img src="./asset/images/marceloskills.png" />
+      <p>
+        Git and GitHub Repository Creation, Hypertext Markup Language (HTML), Cascading Style Sheets (CSS), JavaScript (JS).
+      </p>
+    </div>
+    <div class="caracteristics-education">
+      <h3>Education</h3>
+      <img src="./asset/images/marceloeducation.png" />
+      <p>
+        Studying coding at Sydney University, graduated as Electronics and Communications Engineering at TAFE, Bacharel in Electrical Engineering at INATEL, and MBA in Project Management at FGV.
+    </div>
   </div>
 </body>
