Created footer class contact and adjusted css

--- a/index.html
+++ b/index.html
@@ -73,4 +73,7 @@
         Studying coding at Sydney University, graduated as Electronics and Communications Engineering at TAFE, Bacharel in Electrical Engineering at INATEL, and MBA in Project Management at FGV.
     </div>
   </div>
-</body>
+  <footer id="contact" class="contact">
+    <h3><a href="mailto:mscamposmg@gmail.com">CONTACT ME</a> if you would like more information.</a></h3>
+  </footer>
+  </body>
